Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
[DP-MST] WARNING: drivers/gpu/drm/drm_dp_mst_topology.c:4890 drm_dp_mst_atomic_check_mstb_bw_limit+0x193/0x1c0
Getting the following WARNING
<4> [1501.181817] ------------[ cut here ]------------
<4> [1501.181823] WARNING: CPU: 5 PID: 1756 at drivers/gpu/drm/drm_dp_mst_topology.c:4890 drm_dp_mst_atomic_check_mstb_bw_limit+0x193/0x1c0
<4> [1501.181825] Modules linked in: vgem snd_hda_codec_hdmi i915 x86_pkg_temp_thermal coretemp mei_hdcp crct10dif_pclmul crc32_pclmul snd_hda_intel snd_intel_dspcfg ghash_clmulni_intel snd_hda_codec snd_hwdep e1000e snd_hda_core snd_pcm mei_me ptp pps_core mei intel_lpss_pci prime_numbers ftdi_sio usbserial
<4> [1501.181840] CPU: 5 PID: 1756 Comm: kms_atomic_tran Tainted: G U W 5.7.0-rc5-CI-CI_DRM_8492+ #1
<4> [1501.181842] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U LPDDR4/4x T4 RVP, BIOS TGLSFWI1.R00.3175.A01.2004250014 04/25/2020
<4> [1501.181844] RIP: 0010:drm_dp_mst_atomic_check_mstb_bw_limit+0x193/0x1c0
<4> [1501.181846] Code: e6 e8 91 fe ff ff 85 c0 7e b7 44 0f b7 4b 12 eb 85 48 89 fa 48 c7 c6 c0 4d 35 82 bf 10 00 00 00 e8 42 11 03 00 e9 fa fe ff ff <0f> 0b b8 ea ff ff ff eb 92 48 89 d9 48 c7 c6 e8 4d 35 82 bf 10 00
<4> [1501.181848] RSP: 0018:ffffc90000f73ac8 EFLAGS: 00010246
<4> [1501.181850] RAX: 00000000000000e9 RBX: ffff88829628c000 RCX: 0000000000000000
<4> [1501.181851] RDX: ffff8882839ff440 RSI: ffffffff82354dc0 RDI: 0000000000000010
<4> [1501.181853] RBP: ffff88829c5a63a0 R08: ffff88829c5689f0 R09: 0000000000000000
<4> [1501.181855] R10: ffffc90000f73b08 R11: 0000000096ec50d3 R12: ffff888290f0e8c0
<4> [1501.181856] R13: ffff888290f0e8c8 R14: ffffffff82354e30 R15: 0000000000000000
<4> [1501.181858] FS: 00007fb37d57de40(0000) GS:ffff8882a8880000(0000) knlGS:0000000000000000
<4> [1501.181859] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [1501.181861] CR2: 00007fb37b7272f8 CR3: 0000000006610003 CR4: 0000000000760ee0
<4> [1501.181862] PKRU: 55555554
<4> [1501.181864] Call Trace:
<4> [1501.181869] drm_dp_mst_atomic_check+0x133/0x1b0
<4> [1501.181900] intel_atomic_check+0x618/0x2320 [i915]
<4> [1501.181911] drm_atomic_check_only+0x569/0x810
<4> [1501.181918] drm_atomic_commit+0xe/0x50
<4> [1501.181922] drm_client_modeset_commit_atomic+0x1e7/0x250
<4> [1501.181932] drm_client_modeset_commit_locked+0x42/0x1a0
<4> [1501.181936] drm_client_modeset_commit+0x1c/0x40
<4> [1501.181939] drm_fb_helper_restore_fbdev_mode_unlocked+0x42/0x90
<4> [1501.181969] intel_fbdev_restore_mode+0x2b/0x60 [i915]
<4> [1501.181972] drm_lastclose+0x2a/0x50
<4> [1501.181974] drm_release_noglobal+0x35/0x50
<4> [1501.181978] __fput+0xf4/0x260
<4> [1501.181985] task_work_run+0x6e/0xa0
<4> [1501.181991] do_exit+0x3af/0xd50
<4> [1501.181998] do_group_exit+0x42/0xb0
<4> [1501.182005] __x64_sys_exit_group+0xf/0x10
<4> [1501.182009] do_syscall_64+0x4f/0x220
<4> [1501.182015] entry_SYSCALL_64_after_hwframe+0x49/0xb3
<4> [1501.182017] RIP: 0033:0x7fb37c9b8e06
<4> [1501.182022] Code: Bad RIP value.
<4> [1501.182023] RSP: 002b:00007fff1702ecb8 EFLAGS: 00000246 ORIG_RAX: 00000000000000e7
<4> [1501.182025] RAX: ffffffffffffffda RBX: 00007fb37ccbb740 RCX: 00007fb37c9b8e06
<4> [1501.182027] RDX: 0000000000000000 RSI: 000000000000003c RDI: 0000000000000000
<4> [1501.182028] RBP: 0000000000000000 R08: 00000000000000e7 R09: ffffffffffffff80
<4> [1501.182030] R10: 00007fb370ed70c0 R11: 0000000000000246 R12: 00007fb37ccbb740
<4> [1501.182032] R13: 0000000000000004 R14: 00007fb37ccc4628 R15: 0000000000000000
<4> [1501.182041] irq event stamp: 613556
<4> [1501.182043] hardirqs last enabled at (613555): [<ffffffff81a4e717>] _raw_spin_unlock_irqrestore+0x47/0x60
<4> [1501.182046] hardirqs last disabled at (613556): [<ffffffff81001d50>] trace_hardirqs_off_thunk+0x1a/0x1c
<4> [1501.182048] softirqs last enabled at (613406): [<ffffffff81e00395>] __do_softirq+0x395/0x49e
<4> [1501.182050] softirqs last disabled at (613349): [<ffffffff810bbd1a>] irq_exit+0xba/0xc0
<4> [1501.182052] ---[ end trace 1fe9c883fcd279dd ]---